<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scrooge</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_export">Export</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="add">Add</string>
    <string name="add_account">New</string>
    <string name="title_activity_add_account">AddAccountActivity</string>
    <string name="account_name">Account name</string>
    <string name="account_saldo">Initial account balance</string>
    <string name="account_description">Account description</string>
    <string name="delete_account">Delete account</string>
    <string name="add_tag">Add Tags</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="action_amount">Amount</string>
    <string name="description">Description</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="recent_actions">Recent actions</string>
    <string name="filter">Filter</string>
    <string name="new_title">New</string>
    <string name="tofrom">To/From</string>
    <string name="ellipsis">...</string>
    <string name="plus">+</string>
    <string name="action_amount_not_set">Transaction must have an amount.</string>
    <string name="tags">Tags</string>
    <string name="new_tag">New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save_as_template">Save as template</string>
    <string name="tag_created">New tag created.</string>
    <string name="tag_exists">Tag with that name already exists.</string>
    <string name="search_new">Search / New</string>
    <string name="search">Search</string>
    <string name="previous_targets">Previous Targets</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="action_settings">Settings</string>
    <string name="new_account">New Account</string>
    <string name="set_as_default">Set as default</string>
    <string name="account_must_have_name">Account must have a name.</string>
    <string name="account_must_have_saldo">Account must have an initial balance.</string>
    <string name="default_account">Default account</string>
    <string name="history">History</string>
    <string name="balance">Balance:</string>
    <string name="current_balance">Current balance:</string>
    <string name="change_7_days">Change in last 7 days:</string>
    <string name="change_30_days">Change in last 30 days:</string>
    <string name="edit_account">Edit Account</string>
    <string name="backup_restore">Backup / Restore</string>
    <string name="export">Export</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="title_activity_history">History</string>
    <string name="title_section1">Accounts</string>
    <string name="title_section2">Transactions</string>
    <string name="title_section3">Summary</string>
    <string name="manage_tags">Manage Tags</string>
    <string name="transfer">Transfer between accounts</string>
    <string name="filter_by_time_span">Transactions within time</string>
    <string name="filter_by_tags">Transactions that contain tags</string>
    <string name="filter_by_accounts">Transactions of accounts</string>
    <string name="filter_by_targets">Transactions to/from</string>
    <string name="filter_only_income">Only income</string>
    <string name="filter_only_expenses">Only expenses</string>
    <string name="set_filter">Set filter</string>
    <string name="filter_actions">Filter Transactions</string>
    <string name="filter_info_title_actions">Showing</string>
    <string name="filter_info_title_summary">Includes</string>
    <string name="filter_info_timespan_begin">- transactions from</string>
    <string name="filter_info_timespan_middle">to</string>
    <string name="filter_info_all_actions">- all transactions</string>
    <string name="summary_sum_of_all">Total</string>
    <string name="summary_tags_title">Total by tags</string>
    <string name="accounts_statistics">View statistics</string>
    <string name="no_accounts_help_text">Add an account before you start tracking your expenses. An account is required to add transactions.</string>
    <string name="save_as_action">Show in transactions</string>
    <string name="invalid_transfer_accounts">Check your account selections.</string>
    <string name="invalid_transfer_amount">Transfer must have an amount.</string>
    <string name="transfer_action_description_to_account">Transfer to</string>
    <string name="transfer_action_description_from_account">Transfer from</string>
    <string name="last_backup">Last backup</string>
    <string name="never">never</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_failed">Creating a backup failed.</string>
    <string name="backup_finished">Your data is now backed up.</string>
    <string name="restore_failed">Restoring a backup failed. No changes to data were made.</string>
    <string name="restore_finished">Data from your backup is now restored.</string>
    <string name="delete_account_confirmation_msg">Deleting an account also deletes all associated transactions.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_action_confirmation_msg">Transaction will be deleted.</string>
    <string name="restore_confirmation_msg">Restoring a backup will delete all current data and replace it with data from the backup.</string>

</resources>