<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_new_action"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_title"
        android:orderInCategory="10"></item>
    <item android:id="@+id/menu_filter"
          android:title="@string/filter"
          android:showAsAction="always"
          android:icon="@android:drawable/ic_menu_search"
          android:orderInCategory="11"></item>
    <item android:id="@+id/menu_new_account" android:title="@string/new_account" android:showAsAction="never" android:orderInCategory="12"></item>
    <item android:id="@+id/menu_backup_restore" android:showAsAction="never" android:title="@string/backup_restore" android:orderInCategory="14"></item>
    <item android:id="@+id/menu_export" android:showAsAction="never" android:title="@string/export" android:orderInCategory="15"></item>

</menu>