<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_backup"
            android:id="@+id/textView_backup_last_backup"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="30dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup"
            android:id="@+id/button_backup_backup"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/textView_backup_last_backup"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:id="@+id/button_backup_restore"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/button_backup_backup"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/button_backup_cancel"
            android:layout_below="@+id/button_backup_restore"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/never"
            android:id="@+id/textView_backup_last_date"
            android:layout_toRightOf="@+id/textView_backup_last_backup"
            android:layout_marginLeft="10dp"/>
</RelativeLayout>