<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by_time_span"
                    android:id="@+id/checkBox_filter_time_span"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:id="@+id/textView"
                    android:layout_below="@+id/checkBox_filter_time_span"
                    android:paddingLeft="30dp"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editText_filter_time_from"
                    android:layout_below="@+id/checkBox_filter_time_span"
                    android:layout_toRightOf="@+id/textView"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:id="@+id/textView2"
                    android:layout_below="@+id/editText_filter_time_from"
                    android:paddingLeft="30dp"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editText_filter_time_to"
                    android:layout_below="@+id/editText_filter_time_from"
                    android:layout_alignLeft="@+id/editText_filter_time_from"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by_tags"
                    android:id="@+id/checkBox_filter_tags"
                    android:layout_below="@+id/editText_filter_time_to"
                    android:layout_marginTop="25dp"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by_targets"
                    android:id="@+id/checkBox_filter_targets"
                    android:layout_below="@+id/checkBox_filter_tags"
                    android:layout_marginTop="25dp"/>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_by_accounts"
                    android:id="@+id/checkBox_filter_accounts"
                    android:layout_below="@+id/checkBox_filter_targets"
                    android:layout_marginTop="25dp"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:layout_below="@+id/checkBox_filter_accounts">

                <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/set_filter"
                        android:id="@+id/button_filter_set"
                        android:layout_weight="1"/>

                <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:id="@+id/button_filter_cancel"
                        android:layout_weight="1"/>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>